# auditcore

./: .gitignore  ARCHITECTURE.md  Makefile  README.md
.github/workflows/: ci.yml
agents/: AGENTS.md
agents/_shared/: discovery_agent_output.json  domain_agent_output.json
agents/blueprint/: agent.yaml
agents/blueprint/prompts/: system.md
agents/blueprint/schemas/: output.json
agents/cloud_analysis/: agent.yaml
agents/cloud_analysis/prompts/: system.md
agents/cloud_optimization/: agent.yaml
agents/cloud_optimization/prompts/: system.md
agents/collection_planner/: agent.yaml
agents/collection_planner/prompts/: system.md
agents/collection_planner/schemas/: output.json
agents/database/: agent.yaml
agents/database/prompts/: system.md
agents/hardware/: agent.yaml
agents/hardware/prompts/: system.md
agents/intake/: agent.yaml
agents/intake/prompts/: system.md
agents/intake/schemas/: output.json
agents/kubernetes/: agent.yaml
agents/kubernetes/prompts/: system.md
agents/normalization/: agent.yaml
agents/normalization/prompts/: system.md
agents/normalization/schemas/: output.json
agents/performance_analysis/: agent.yaml
agents/performance_analysis/prompts/: system.md
agents/report/: agent.yaml
agents/report/prompts/: system.md
agents/report/schemas/: output.json
agents/riskrank/: agent.yaml
agents/security_analysis/: agent.yaml
agents/security_analysis/prompts/: system.md
agents/verification/: agent.yaml
agents/verification/prompts/: system.md
agents/verification/schemas/: output.json
collector/: go.mod
collector/cmd/auditor-collect/: main.go
collector/hwprobe/: CMakeLists.txt
collector/hwprobe/src/: json_writer.cpp  json_writer.hpp  main.cpp  nvml.cpp  sensors.cpp  topology.cpp  topology.hpp
collector/internal/policy/: allowlist.go  allowlist_test.go
collector/internal/runner/: runner.go
collector/pkg/bundle/: bundle.go  bundle_test.go  upload.go
connectors/: README.md  base.py
connectors/aws/: __init__.py
connectors/kubernetes/: __init__.py
connectors/postgres/: __init__.py
connectors/prometheus/: __init__.py
deploy/docker-compose/: docker-compose.yml
deploy/docker-compose/postgres/init/: 01_schema.sql
docs/: DEV.md
policy/: README.md  allowlist.rego  allowlist_test.rego
schemas/: asset.json  blueprint_item.json  evidence_item.json  finding.json  index.json  observation.json  recommendation.json  report_section.json  risk_score.json  run.json  verification_test.json
services/ingestion-api/: pyproject.toml
services/ingestion-api/auditcore_ingestion/: bundle.py  config.py  db.py  main.py  storage.py
services/ingestion-api/tests/: test_bundle.py
services/model-gateway/: pricing.yaml  pyproject.toml  routing.yaml
services/model-gateway/auditcore_gateway/: config.py  cost.py  gateway.py  main.py  routing.py  types.py  validator.py
services/model-gateway/auditcore_gateway/providers/: __init__.py  anthropic.py  google.py  local.py  openai.py
services/model-gateway/tests/: test_routing.py  test_validator.py
services/normalizer-worker/: Cargo.toml
services/normalizer-worker/src/: config.rs  db.rs  main.rs  normalize.rs  redact.rs  storage.rs  worker.rs
services/normalizer-worker/src/parsers/: findmnt.rs  hwprobe.rs  ip_addr.rs  lsblk.rs  lscpu.rs  lspci.rs  mod.rs  ss.rs  uname.rs
services/orchestrator/: pyproject.toml
services/orchestrator/auditcore_orchestrator/: config.py  discovery.py  domains.py  gateway_client.py  main.py  repo.py  report.py  runner.py
services/orchestrator/tests/: conftest.py  test_discovery.py  test_report.py  test_runner.py
services/report-generator/: pyproject.toml
services/report-generator/auditcore_report/: cli.py  loader.py  render.py  sections.py
services/report-generator/auditcore_report/templates/: _base.html.j2  engineer.html.j2  executive.html.j2  sections.html.j2  summary.html.j2  technical.html.j2
services/report-generator/tests/: test_render.py  test_sections.py
services/scoring-engine/: pyproject.toml
services/scoring-engine/auditcore_scoring/: __init__.py  engine.py
services/scoring-engine/tests/: test_engine.py
tests/fixtures/: lscpu_sample.txt
tools/: check_allowlist_drift.py
