[project]
name = "auditcore-model-gateway"
version = "0.1.0"
description = "AuditCore model gateway — provider-agnostic AI calls with routing, cost accounting, and structured-output validation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "jsonschema>=4.22",
    "httpx>=0.27",
]

[project.optional-dependencies]
providers = [
    # Pinned but optional; the gateway only imports a provider when routed to.
    "anthropic>=0.40",
    "openai>=1.50",
    "google-generativeai>=0.8",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auditcore_gateway"]

[tool.ruff]
line-length = 100
target-version = "py312"
