[package]
name = "auditcore-normalizer"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "AuditCore normalizer worker — parses raw evidence into structured findings"

[[bin]]
name = "auditcore-normalizer"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros",
] }
aws-config = { version = "1", default-features = false, features = ["rustls", "behavior-version-latest"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["rustls", "behavior-version-latest"] }
aws-credential-types = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
futures = "0.3"

[dev-dependencies]
pretty_assertions = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
