[project]
name = "auditcore-orchestrator"
version = "0.1.0"
description = "AuditCore discovery orchestrator — runs the discovery agents over a run's evidence and writes observations"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "psycopg[binary,pool]>=3.2",
    "httpx>=0.27",
    "click>=8.1",
    "auditcore-models",
    "auditcore-agents",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.5"]

[tool.uv.sources]
auditcore-models = { path = "../../packages/models-py", editable = true }
auditcore-agents = { path = "../../packages/agents-py", editable = true }

[project.scripts]
auditcore-discover = "auditcore_orchestrator.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auditcore_orchestrator"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
