[project]
name = "auditcore-report-generator"
version = "0.1.0"
description = "Renders AuditCore reports (Markdown → HTML, optional PDF)"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1",
    "markdown-it-py>=3.0",
    "pygments>=2.18",
    "psycopg[binary]>=3.2",
    "click>=8.1",
    "pydantic>=2.7",
    "auditcore-models",
]

[project.optional-dependencies]
pdf = ["weasyprint>=62"]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.uv.sources]
auditcore-models = { path = "../../packages/models-py", editable = true }

[project.scripts]
auditcore-report = "auditcore_report.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auditcore_report"]
