[project]
name = "auditcore-scoring-engine"
version = "0.1.0"
description = "Deterministic risk scoring + ranking for AuditCore findings"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "auditcore-models",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[tool.uv.sources]
auditcore-models = { path = "../../packages/models-py", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auditcore_scoring"]
